--- a/index.html
+++ b/index.html
@@ -6,16 +6,49 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
 
+    <!-- Css -->
+    <link rel="stylesheet" href="assets/css/default.css">
+
+
     <title>Frontend Mentor | PayAPI Website Challenge</title>
   </head>
 
   <body>
-    Pricing
-    About
-    Contact
-    Schedule a Demo
+    <header>
+      <div class="bg_pattern"></div>
+      <div class="container">
+        <div class="header_content">
+          <a href="index.html" class="logo">
+            <img src="assets/shared/desktop/logo.svg" alt="">
+          </a>
+          <nav class="nav_bar">
+            <ul class="nav_list">
+              <li class="nav_item">
+                <a href="" class="nav_link">Pricing</a>
+              </li>
+              <li class="nav_item">
+                <a href="" class="nav_link">About</a>
+              </li>
+              <li class="nav_item">
+                <a href="" class="nav_link">Contact</a>
+              </li>
+              <li class="nav_item">
+                <a href="" class="nav_link">Schedule a Demo</a>
+              </li>
+            </ul>
+          </nav>
+          <button class="burger">
+            <div class="hamburguer">
+              <div id="bar_1" class="bar"></div>
+              <div id="bar_2" class="bar"></div>
+              <div id="bar_3" class="bar"></div>
+            </div>
+          </button>
+        </div>
+      </div>
+    </header>
 
-    Start building with our APIs for absolutely free.
+    <!-- Start building with our APIs for absolutely free.
     Enter email address 
     Schedule a Demo
     Have any questions? Contact Us
@@ -54,7 +87,7 @@
 
     Pricing
     About
-    Contact
+    Contact -->
   </body>
 
 </html>
