--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
               <a href="#" class="btn-menu btn">Schedule a Demo</a>
             </ul>
           </nav>
+          <nav class="nav_bar_tablet">
+            <ul class="nav_list">
+              <li class="nav_item">
+                <a href="" class="nav_link">Pricing</a>
+              </li>
+              <li class="nav_item">
+                <a href="" class="nav_link">About</a>
+              </li>
+              <li class="nav_item">
+                <a href="" class="nav_link">Contact</a>
+              </li>
+            </ul>
+            <a href="#" class="btn-menu btn">Schedule a Demo</a>
+          </nav>
           <button class="burger" id="burger">
             <div class="hamburguer">
               <div id="bar_1" class="bar"></div>
@@ -53,20 +67,48 @@
             </div>
           </button>
         </div>
+
+        <div class="start">
+          <img src="assets/home/desktop/illustration-phone-mockup.svg" alt="">
+          <div class="text_start">
+            <h1>Start building with our APIs for absolutely free.</h1>
+            <form action="" id="form">
+              <input type="email" name="email" id="email" placeholder="Enter email address">
+              <a href="" class="btn">Schedule a Demo</a>
+            </form>
+            <p>Have any questions? <a href="">Contact Us</a></p>
+          </div>
+        </div>
+
       </div>
     </header>
 
-    <!-- Start building with our APIs for absolutely free.
-    Enter email address 
-    Schedule a Demo
-    Have any questions? Contact Us
+    <main class="main">
+      <div class="bg_work">
+        <div class="work container">
+          <div class="companies_work">
+            <img src="assets/shared/desktop/tesla.svg" alt="">
+            <img src="assets/shared/desktop/microsoft.svg" alt="">
+            <img src="assets/shared/desktop/hewlett-packard.svg" alt="">
+            <img src="assets/shared/desktop/oracle.svg" alt="">
+            <img src="assets/shared/desktop/google.svg" alt="">
+            <img src="assets/shared/desktop/nvidia.svg" alt="">
+          </div>
+          <div class="txt_work">
+            <h2>Who we work with</h2>
+            <p>
+              Today, millions of people around the world have successfully connected
+              their accounts to apps they love using our API. We provide developers
+              with the tools they need to create easy and accessible experiences
+              for their users.
+            </p>
+            <a href="" class="btn_ligth">About Us</a>
+          </div>
+        </div>
+      </div>
+    </main>
 
-    Who we work with
-    Today, millions of people around the world have successfully connected 
-    their accounts to apps they love using our API. We provide developers 
-    with the tools they need to create easy and accessible experiences 
-    for their users.
-    About Us
+    <!-- 
 
     Easy to implement
     Our API comes with just a few lines of code. You’ll be up and running in 
