--- a/index.html
+++ b/index.html
@@ -106,15 +106,22 @@
           </div>
         </div>
       </div>
+      <div class="implement container">
+        <div class="img_code">
+          <img src="assets/home/desktop/illustration-easy-to-implement.svg" alt="">
+        </div>
+        <div class="text_implement">
+          <h2>Easy to implement</h2>
+          <p>
+            Our API comes with just a few lines of code. You’ll be up and running in
+            no time. We built our documentation page to integrate payments functionality
+            with ease.
+          </p>
+        </div>
+      </div>
     </main>
 
     <!-- 
-
-    Easy to implement
-    Our API comes with just a few lines of code. You’ll be up and running in 
-    no time. We built our documentation page to integrate payments functionality 
-    with ease.
-
     Simple UI & UX
     Our pre-built form is easy to integrate in your app or website’s checkout 
     flow and designed to optimize conversion.
