--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
           <img src="assets/home/desktop/illustration-phone-mockup.svg" alt="">
           <div class="text_start">
             <h1>Start building with our APIs for absolutely free.</h1>
-            <form action="" id="form">
-              <input type="email" name="email" id="email" placeholder="Enter email address">
+            <form action="" id="form" class="form">
+              <input type="email" name="email" id="email" class="email" placeholder="Enter email address">
               <a href="" class="btn">Schedule a Demo</a>
             </form>
             <p>Have any questions? <a href="">Contact Us</a></p>
@@ -106,7 +106,7 @@
           </div>
         </div>
       </div>
-      <div class="implement container">
+      <div class="implement container content">
         <div class="img_code">
           <img src="assets/home/desktop/illustration-easy-to-implement.svg" alt="">
         </div>
@@ -119,34 +119,101 @@
           </p>
         </div>
       </div>
+
+      <div class="user container content">
+        <div class="img_user">
+          <img src="assets/home/desktop/illustration-simple-ui.svg" alt="">
+        </div>
+        <div class="text_user">
+          <h2>Simple UI & UX</h2>
+          <p>
+            Our pre-built form is easy to integrate in your app or website’s checkout
+            flow and designed to optimize conversion.
+          </p>
+        </div>
+      </div>
+      <div class="circle_bg">
+        <img src="assets/shared/desktop/bg-pattern-circle.svg" alt="">
+      </div>
+
+      <div class="about container">
+        <div class="about_content">
+          <div class="img_about">
+            <img src="assets/home/desktop/icon-personal-finances.svg" alt="">
+          </div>
+          <div class="about_text">
+            <h3>Personal Finances</h3>
+            <p>
+              Consolidate financial data from multiple sources and categorize transactions up to
+              2 years of history. Analyze reports to reconcile activities in your account.
+            </p>
+          </div>
+        </div>
+        <div class="about_content">
+          <div class="img_about">
+            <img src="assets/home/desktop/icon-banking-and-coverage.svg" alt="">
+          </div>
+          <div class="about_text">
+            <h3>Banking & Coverage</h3>
+            <p>
+              With our platform, you can speed up account onboarding and support ongoing payments 
+              for checking, savings, credit card, and brokerage accounts.
+            </p>
+          </div>
+        </div>
+        <div class="about_content">
+          <div class="img_about">
+            <img src="assets/home/desktop/icon-consumer-payments.svg" alt="">
+          </div>
+          <div class="about_text">
+            <h3>Consumer Payments</h3>
+            <p>
+              It’s easier to set up secure bank payments with us through a flow designed with the 
+              user experience in mind. Customers could instantly authenticate their account.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="ready container">
+        <h2>Ready to start? </h2>
+        <form action="" id="form" class="form">
+          <input type="email" name="email" id="email" class="email" placeholder="Enter email address">
+          <a href="" class="btn">Schedule a Demo</a>
+        </form>
+      </div>
     </main>
-
+    <footer class="footer" id="footer">
+      <div class="footer_content container">
+        <div class="left_content">
+          <div class="logo_footer">
+            <a href=""><img src="assets/shared/desktop/logo.svg" alt=""></a>
+          </div>
+          <ul class="nav_list">
+            <li class="nav_link">
+              <a href="">Pricing</a>
+            </li>
+            <li class="nav_link">
+              <a href="">About</a>
+            </li>
+            <li class="nav_link">
+              <a href="">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="social_media">
+          <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+      </div>
+    </footer>
     <!-- 
-    Simple UI & UX
-    Our pre-built form is easy to integrate in your app or website’s checkout 
-    flow and designed to optimize conversion.
 
-    Personal Finances
-    Consolidate financial data from multiple sources and categorize transactions up to
-    2 years of history. Analyze reports to reconcile activities in your account.
-
-    Banking & Coverage
-    With our platform, you can speed up account onboarding and support ongoing payments 
-    for checking, savings, credit card, and brokerage accounts.
-
-    Consumer Payments
-    It’s easier to set up secure bank payments with us through a flow designed with the 
-    user experience in mind. Customers could instantly authenticate their account.
-
-    Ready to start? 
-    Enter email address 
-    Schedule a Demo
-
-    Pricing
-    About
-    Contact -->
+     -->
 
     <script src="assets/script/header.js"></script>
+    <script src="https://kit.fontawesome.com/24690ddc1f.js" crossorigin="anonymous"></script>
   </body>
 
 </html>
