--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="line"></div>
             <ul class="nav_list">
               <li class="nav_item">
-                <a href="" class="nav_link">Pricing</a>
+                <a href="pricing.html" class="nav_link">Pricing</a>
               </li>
               <li class="nav_item">
                 <a href="" class="nav_link">About</a>
@@ -191,7 +191,7 @@
           </div>
           <ul class="nav_list">
             <li class="nav_link">
-              <a href="">Pricing</a>
+              <a href="pricing.html">Pricing</a>
             </li>
             <li class="nav_link">
               <a href="">About</a>
@@ -208,10 +208,8 @@
         </div>
       </div>
     </footer>
-    <!-- 
 
-     -->
-
+    
     <script src="assets/script/header.js"></script>
     <script src="https://kit.fontawesome.com/24690ddc1f.js" crossorigin="anonymous"></script>
   </body>
