--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="pricing.html" class="nav_link">Pricing</a>
               </li>
               <li class="nav_item">
-                <a href="" class="nav_link">About</a>
+                <a href="about.html" class="nav_link">About</a>
               </li>
               <li class="nav_item">
                 <a href="" class="nav_link">Contact</a>
@@ -194,7 +194,7 @@
               <a href="pricing.html">Pricing</a>
             </li>
             <li class="nav_link">
-              <a href="">About</a>
+              <a href="about.html">About</a>
             </li>
             <li class="nav_link">
               <a href="">Contact</a>
